create secret in ssm

--- a/cfn_macros/GenerateSecret/GenerateSecret.yaml
+++ b/cfn_macros/GenerateSecret/GenerateSecret.yaml
@@ -12,6 +12,15 @@ Resources:
             Action: sts:AssumeRole
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+      Policies:
+        - PolicyName: SsmPermissions
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action:
+                  - ssm:*
+                Resource: '*'
 
   MacroFunction:
     Type: AWS::Lambda::Function
@@ -20,6 +29,7 @@ Resources:
         ZipFile: |
           import secrets
           import string
+          import boto3
 
           def generate_secret(length=16, upper=True, lower=True,
                               number=True, special=True, exclude=None):
@@ -65,11 +75,28 @@ Resources:
 
           def handler(event, context):
               print(event)
+              ssm = boto3.client('ssm')
               params = {k.lower(): v for k, v in event['params'].items()}
+              secret_name = params.pop('secretname')
+              # Check to see if secret exists in SSM
+              try:
+                  get_param = ssm.get_parameter(Name=secret_name)
+                  secret_version = get_param['Parameter']['Version']
+              except ssm.exceptions.ParameterNotFound:
+                  secret = generate_secret(**params)
+                  put_param = ssm.put_parameter(
+                      Name=secret_name,
+                      Value=secret,
+                      Type='SecureString'
+                  )
+                  secret_version = put_param['Version']
+
+              cfn_reference="resolve:ssm-secure:{}:{}".format(secret_name,
+                                                                secret_version)
               response = {
                   "requestId": event["requestId"],
                   "status": "success",
-                  "fragment": generate_secret(**params)
+                  "fragment": "'{{" + cfn_reference + "}}'"
               }
               print(response)
               return response
