--- a/cfn_macros/GenerateSecret/GenerateSecretExample.yaml
+++ b/cfn_macros/GenerateSecret/GenerateSecretExample.yaml
@@ -1,14 +1,34 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: tests String macro functions
+Parameters:
+  DbPasswordParam:
+    Type: String
+    Default: /Dev/Db/AdminPassword:1
+
 Resources:
-  S3Bucket:
-    Type: AWS::S3::Bucket
+  LambdaRole:
+    Type: AWS::IAM::Role
     Properties:
-      Tags:
-        - Key: Secret
-          Value:
-            'Fn::Transform':
-              - Name: GenerateSecret
-                Parameters:
-                  Length: 8
-                  Special: false
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: lambda.amazonaws.com
+            Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+
+  LambdaFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      Code:
+        ZipFile: |
+          import os
+          def handler(event, context):
+            secret = os.environ['SECRET']
+            print(secret)
+            return secret
+
+      Handler: index.handler
+      Runtime: python3.6
+      Role: !GetAtt LambdaRole.Arn
