--- a/cfn_macros/GenerateSecret/GenerateSecretExample.yaml
+++ b/cfn_macros/GenerateSecret/GenerateSecretExample.yaml
@@ -1,34 +1,24 @@
-AWSTemplateFormatVersion: "2010-09-09"
+AWSTemplateFormatVersion: 2010-09-09
 Parameters:
   DbPasswordParam:
     Type: String
-    Default: /Dev/Db/AdminPassword:1
+    Default: /Dev/Db/admin
 
 Resources:
-  LambdaRole:
-    Type: AWS::IAM::Role
+  DB:
+    Type: AWS::RDS::DBInstance
     Properties:
-      AssumeRolePolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: lambda.amazonaws.com
-            Action: sts:AssumeRole
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+      AllocatedStorage: 20
+      DBInstanceClass: db.t2.small
+      Engine: MySQL
+      MasterUsername: admin
+      MasterUserPassword:
+        Fn::Transform:
+         - Name: GenerateSecret
+           Parameters:
+             SecretName: !Ref DbPasswordParam
+             Exclude:
+              - '"'
+              - '/'
+              - '@'
 
-  LambdaFunction:
-    Type: AWS::Lambda::Function
-    Properties:
-      Code:
-        ZipFile: |
-          import os
-          def handler(event, context):
-            secret = os.environ['SECRET']
-            print(secret)
-            return secret
-
-      Handler: index.handler
-      Runtime: python3.6
-      Role: !GetAtt LambdaRole.Arn
