--- a/eks_ci_cd/ci/ci_project_stack.yaml
+++ b/eks_ci_cd/ci/ci_project_stack.yaml
@@ -13,10 +13,19 @@ Parameters:
     Description: Path of the EksClusterName Parameter Store String that will be passed to CodeBuild
     Type: String
     Default: "/Build/Dev/EksClusterName"
+  DevK8sNamespaceParam:
+    Description: Path of the DevK8sNamespace Parameter Store String that will be passed to CodeBuild
+    Type: String
+    Default: "/Build/Dev/Namespace"
   HelmChartRepoUrlParam:
     Description: Path of the HelmChartRepoUrl Parameter Store String that will be passed to CodeBuild
     Type: String
     Default: "/Build/Ci/HelmChartRepoUrl"
+  IntegrationTestChartParam:
+    Description: Path of the IntegrationTestChart Parameter Store String that will be passed to CodeBuild
+    Type: String
+    Default: "/Build/Ci/IntegrationTestChart"
+
   GitHubRepoUrl:
     Type: String
   BuildSpecPath:
@@ -49,9 +58,15 @@ Resources:
           - Name: EKS_CLUSTER_NAME
             Type: PARAMETER_STORE
             Value: !Sub ${EksClusterNameParam}
+          - Name: NAMESPACE
+            Type: PARAMETER_STORE
+            Value: !Sub ${DevK8sNamespaceParam}
           - Name: HELM_CHART_REPO_URL
             Type: PARAMETER_STORE
             Value: !Sub ${HelmChartRepoUrlParam}
+          - Name: INTEGRATION_TEST_CHART
+            Type: PARAMETER_STORE
+            Value: !Sub ${IntegrationTestChartParam}
       TimeoutInMinutes: 30
       Triggers:
         Webhook: true
